tests/baselines/reference/parserModuleDeclaration5.errors.txt
parserModuleDeclaration5.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration5.ts(2,18): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration5.ts(3,5): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
parserModuleDeclaration5.ts(3,20): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration5.ts (4 errors) ====
    module M1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      declare module M2 {
                     ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        declare module M3 {
        ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
                       ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        }
      }
    }